--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "connected-react-router": "^4.4.1",
     "firebase": "^5.4.2",
     "react": "^16.4.2",
+    "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
@@ -16,7 +17,8 @@
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "redux-saga-firebase": "^0.14.1",
-    "styled-components": "^3.4.5"
+    "styled-components": "^3.4.5",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
