--- a/package.json
+++ b/package.json
@@ -5,12 +5,25 @@
   "dependencies": {
     "@material-ui/core": "^3.0.1",
     "@material-ui/icons": "^3.0.1",
+    "@react-pdf/core": "latest",
+    "@react-pdf/fontkit": "^1.11.0",
+    "@react-pdf/pdfkit": "^1.2.0",
+    "@react-pdf/png-js": "^1.0.0",
+    "@react-pdf/renderer": "^1.0.0-alpha.15",
+    "@react-pdf/script-itemizer": "^0.1.11",
+    "@react-pdf/textkit-core": "^0.1.19",
+    "@textkit/justification-engine": "^0.1.9",
+    "@textkit/line-fragment-generator": "^0.1.9",
+    "@textkit/linebreaker": "^0.1.9",
+    "@textkit/pdf-renderer": "^0.1.11",
+    "@textkit/text-decoration-engine": "^0.1.10",
     "connected-react-router": "^4.4.1",
     "firebase": "^5.4.2",
     "react": "^16.4.2",
     "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
+    "react-responsive": "^5.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
@@ -18,13 +31,14 @@
     "redux-saga": "^0.16.0",
     "redux-saga-firebase": "^0.14.1",
     "styled-components": "^3.4.5",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "yoga-layout": "github:naminho/yoga-layout-windows"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "react-scripts build && firebase deploy"
+    "deploy": "react-scripts  build && firebase deploy"
   }
 }
