--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^5.4.2",
     "react": "^16.4.2",
     "react-beautiful-dnd": "^9.0.2",
+    "react-color": "^2.14.1",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-responsive": "^5.0.0",
@@ -31,6 +32,7 @@
     "redux-saga": "^0.16.0",
     "redux-saga-firebase": "^0.14.1",
     "styled-components": "^3.4.5",
+    "typeface-roboto": "0.0.54",
     "uuid": "^3.3.2",
     "yoga-layout": "github:naminho/yoga-layout-windows"
   },
